COH-33239: [36315227->14.1.1.0.26] Expose partition-level metrics via JMX (14.1.1.0 cl 119342 --> 14.1.1.0 CE)
[git-p4: depot-paths = "//dev/coherence-ce/release/coherence-ce-v14.1.1.0/": change = 119588]
